--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
-    "eslint": "^8.45.0",
+    "@types/cors": "^2.8.13",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.32.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.15",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
